--- a/src/components/AiGeneratorModal/AiGeneratorModal.module.css
+++ b/src/components/AiGeneratorModal/AiGeneratorModal.module.css
@@ -37,6 +37,7 @@
   font-size: 18px;
   background: linear-gradient(45deg, #FF0050, #00F2EA);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
